# paper_agent

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md  cli.md  extending.md
src/paper_agent/: __init__.py  _util.py  cli.py
src/paper_agent/audit/: __init__.py
src/paper_agent/audit/rule/: __init__.py  bib_audit.py  fig_audit.py  humanize_check.py  punct_audit.py  reverse_verify.py  sample_audit.py  stat_audit.py
src/paper_agent/audit/rules/: __init__.py  en.py  ja.py  zh.py
src/paper_agent/compile/: __init__.py  compile_ps1.py  latexmkrc_gen.py
src/paper_agent/core/: __init__.py  config.py  edit_gate.py
src/paper_agent/golden_papers/: index.json
src/paper_agent/scaffold/: __init__.py  new_project.py
src/paper_agent/score/: __init__.py  dimensions.py  ensemble.py  halt.py  red_team.py
tests/: conftest.py  test_bib_audit.py  test_cli.py  test_compile.py  test_config.py  test_dimensions.py  test_edit_gate.py  test_edit_gate_advisory.py  test_edit_gate_platform.py  test_ensemble.py  test_fig_audit.py  test_golden_papers.py  test_halt.py  test_humanize_check.py  test_punct_audit.py  test_red_team.py  test_reverse_verify.py  test_rules_registry.py  test_sample_audit.py  test_stat_audit.py
tests/fixtures/: cp936_regression.tex  min_cs_zh.tex  min_humanities_zh.bib  min_humanities_zh.tex  min_humanize_data.json  min_linguistics_zh.bib  min_linguistics_zh.tex  min_medicine_zh.tex  min_sciences_zh.tex
tests/integration/: test_aphasia_e2e.py  test_new_e2e.py  test_non_aphasia_e2e.py  test_reverse_verify_e2e.py
(+10 files in other folders)
