[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-agent"
dynamic = ["version"]
description = "Academic paper audit + Edit Gate pipeline (paper.tex 0-write LLM contract)"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "jinja2>=3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[project.scripts]
paper-agent = "paper_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"paper_agent.compile.templates" = ["*.j2"]
"paper_agent.golden_papers" = ["**/*.tex", "**/*.bib", "**/*.json", "**/*.png", "**/*.pdf"]
"paper_agent.audit.rules" = ["*.py"]

[tool.setuptools_scm]
version_file = "src/paper_agent/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
